# CGLib

./: LICENSE  README.md  dc_closest_points.py  models.py  setup.cfg  stripe_method.py  triangulation_refinement.py
CGLib/: chain_method.py  dc_closest_points.py  divide_and_conquer_hull.py  graham.py  jarvis.py  kd_tree_method.py  loci.py  models.py  preparata.py  quickhull.py  region_tree_method.py  slab_method.py  stripe_method.py  triangulation_refinement.py
tests/: test_algorithms.py  test_models.py
