[metadata]
name = CGLib
version = 1.0.4
author = artandfi&Chmele&MaksymRud&DeerInBlack
author_email = artyom.fisunenko@gmail.com
description = Computational geometry algorithms library
url = https://github.com/OGKG/CGLib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = CGLib
packages = find:
python_requires = >=3.6

[options.packages.find]
where = CGLib
